--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
 
     implementation "androidx.activity:activity-ktx:1.2.1"
     implementation "androidx.fragment:fragment-ktx:1.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
