--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.0
+  flutter_bloc: ^6.0.0
+  equatable: ^1.0.0
+  animated_size_and_fade: ^2.0.0
+  scroll_to_index: ^1.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
