--- a/ReactApp/package.json
+++ b/ReactApp/package.json
@@ -10,14 +10,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "0.64.0",
+    "react-native-sqlite-storage": "^5.0.0",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.35",
     "@types/react-native": "^0.64.0",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
