--- a/ionic-app/package.json
+++ b/ionic-app/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-android-live": "ionic capacitor run android -l --host=192.168.0.143",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
+  "config": {
+    "ionic_webpack": "./webpack.config.js"
+  },
   "dependencies": {
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
@@ -21,11 +25,14 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/sqlite": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage": "^3.0.2",
     "@ionic/storage-angular": "^3.0.2",
+    "cordova-sqlite-storage": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typeorm": "^0.2.31",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -38,7 +45,7 @@
     "@ionic/angular-toolkit": "^3.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
