--- a/ionic-app/capacitor.config.json
+++ b/ionic-app/capacitor.config.json
@@ -9,9 +9,5 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {},
-  "server": {
-    "url": "http://192.168.0.143:8100",
-    "cleartext": true
-  }
+  "cordova": {}
 }
