--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -24,13 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.0
-  flutter_bloc: ^6.0.0
   equatable: ^1.0.0
   animated_size_and_fade: ^2.0.0
   scroll_to_index: ^1.0.6
   rxdart: ^0.23.1
   sqflite: ^1.3.0
   path: ^1.8.0
+  provider: ^5.0.0
+  flutter_hooks: ^0.16.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
