--- a/ionic-app/package.json
+++ b/ionic-app/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@capacitor/ios": "^2.4.7",
     "@ionic-native/sqlite": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "cordova-sqlite-storage": "^6.0.0",
